<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Activities.ClubCanRegister">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Club Registration"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/phone_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/socialEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/social_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/socialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/social_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/contactEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="Please enter your main contact name"
            android:inputType="text" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Main Contact Name (optional)" />



        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/bioEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/bio_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/bioTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bio_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />




        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="OnRegisterButton"
            android:text="@string/register_button" />

    </LinearLayout>
</ScrollView>

</RelativeLayout>