<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Database.Interfaces.CanRegister"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Resistration"
                android:textSize="40sp"
                android:textColor="@color/darkbrown"
                android:fontFamily="@font/bubblebobble" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameEditText"
                android:hint="Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="10sp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/darkbrown"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstNameEditText"
                android:hint="First Name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/darkbrown"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"
                android:hint="Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="10sp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/darkbrown"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bioEditText"
                android:hint="Bio (optional)"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="10sp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/darkbrown"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEditText"
                android:hint="Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="10sp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/darkbrown"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/roleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/role_label"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/darkbrown"/>

            <RadioGroup
                android:id="@+id/roleGroup"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/roleParticipant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_participant"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/darkbrown"/>

                <RadioButton
                    android:id="@+id/roleClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_club"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/darkbrown"/>
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="OnRegisterButton"
                android:text="@string/register_button"
                app:backgroundTint="@color/orange"
                app:strokeWidth="3dp"
                app:strokeColor="@color/darkbrown"
                android:textColor="@color/eggwhite"
                android:fontFamily="@font/bubblebobble"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>